// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PrivateRoute > matches snapshot when authenticated 1`] = `
<DocumentFragment>
  <div>
    Protected Content
  </div>
</DocumentFragment>
`;

exports[`PrivateRoute > matches snapshot when loading 1`] = `
<DocumentFragment>
  <div>
    Loading Spinner...
  </div>
</DocumentFragment>
`;

exports[`PrivateRoute > matches snapshot when unauthenticated 1`] = `
<DocumentFragment>
  <div>
    Login Page
  </div>
</DocumentFragment>
`;
